# remote_llm

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gpt_neo_embeddings.ipynb  grt_playtest_example.ipynb  huggingface_client.py  huggingface_client_notebook.ipynb  huggingface_service.py  keystore.db  llm_rpc.proto  mock_llm.py  pyproject.toml  requirements.txt  server_requirements.txt  setup.py
examples/: grt_playtest_example.ipynb  huggingface_client.py  huggingface_service.py
remote_llm/: __init__.py  base_llm.py  client.py  gpt_neo_wrap.py  keystore.py  langchain_wrap.py  llm_class.py  schema.py  server.py
remote_llm/llm_rpc/: api.py
skeleton_class/: README.md  requirements.txt
ssl_config/: key_gen.sh
tests/: keystore_test.py  keystore_tests.py  rpc_test.py  test_llm.py
