[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[metadata]

[project]
name = "remote_llm"
version = "0.0.1"
description = "Remote LLM"
authors = [
{name = "Comath", email = "code@aivillage.org"},]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/comath/remote_llm"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[options.extras_require]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
